--- a/src/main/webapp/WEB-INF/TEST/testd3js.html
+++ b/src/main/webapp/WEB-INF/TEST/testd3js.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+<head><meta charset="utf-8">
+    <style>
 
-    .links line {
-        stroke: #999;
-        stroke-opacity: 0.6;
-    }
+        .links line {
+            stroke: #999;
+            stroke-opacity: 0.6;
+        }
 
-    .nodes circle {
-        stroke: #fff;
-        stroke-width: 1.5px;
-    }
+        .nodes circle {
+            stroke: #fff;
+            stroke-width: 1.5px;
+        }
 
-</style>
-<svg width="960" height="600"></svg>
+    </style></head>
+
+<body>
+<h1>Hello world;</h1>
+<!--<svg width="960" height="600"></svg>
 <script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>
 <script>
 
@@ -90,4 +93,6 @@
         d.fy = null;
     }
 
-</script>
+</script>-->
+
+</body>
