--- a/src/main/webapp/WEB-INF/TEST/testd3js.html
+++ b/src/main/webapp/WEB-INF/TEST/testd3js.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head><meta charset="utf-8">
+<meta charset="utf-8">
     <style>
 
         .links line {
@@ -12,12 +12,17 @@
             stroke-width: 1.5px;
         }
 
-    </style></head>
+    </style>
 
-<body>
-<h1>Hello world;</h1>
-<!--<svg width="960" height="600"></svg>
+<div id="knowledgeGraph" style="height:600px">
+    <svg width="1000" height="900"></svg>
+</div>
+
+<div id="description"></div>
+
 <script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
 
     var svg = d3.select("svg"),
@@ -27,7 +32,9 @@
     var color = d3.scaleOrdinal(d3.schemeCategory20);
 
     var simulation = d3.forceSimulation()
-        .force("link", d3.forceLink().id(function(d) { return d.id; }))
+        .force("link", d3.forceLink().id(function (d) {
+            return d.id;
+        }).distance(width / 4))
         .force("charge", d3.forceManyBody())
         .force("center", d3.forceCenter(width / 2, height / 2));
 
@@ -41,17 +48,43 @@
             .enter().append("line")
             .attr("stroke-width", function(d) { return Math.sqrt(d.value); });
 
-        var node = svg.append("g")
+        /*var node = svg.append("g")
             .attr("class", "nodes")
             .selectAll("circle")
             .data(graph.nodes)
             .enter().append("circle")
-            .attr("r", 5)
+         .attr("r", 25)
             .attr("fill", function(d) { return color(d.group); })
             .call(d3.drag()
                 .on("start", dragstarted)
                 .on("drag", dragged)
+         .on("end", dragended));*/
+
+        var gnodes = svg.selectAll('g.gnode')
+            .data(graph.nodes)
+            .enter()
+            .append('g')
+            .classed('gnode', true);
+
+        var node = gnodes.append("circle")
+            .attr("class", "node")
+            .attr("r", 25)
+            .attr("fill", function (d) {
+                return color(d.group);
+            })
+            .on("mouseover", showDescription)
+            .call(d3.drag()
+                .on("start", dragstarted)
+                .on("drag", dragged)
                 .on("end", dragended));
+
+        var labels = gnodes.append("text")
+            .attr("dx", function (d) {
+                return -25;
+            })
+            .text(function (d) {
+                return d.id;
+            });
 
         node.append("title")
             .text(function(d) { return d.id; });
@@ -70,9 +103,13 @@
                 .attr("x2", function(d) { return d.target.x; })
                 .attr("y2", function(d) { return d.target.y; });
 
-            node
+            /*    node
                 .attr("cx", function(d) { return d.x; })
                 .attr("cy", function(d) { return d.y; });
+             */
+            gnodes.attr("transform", function (d) {
+                return 'translate(' + [d.x, d.y] + ')';
+            });
         }
     });
 
@@ -93,6 +130,9 @@
         d.fy = null;
     }
 
-</script>-->
+    function showDescription(d) {
+        console.log(d.id + "  group:" + d.group);
+        document.getElementById("description").innerHTML = d.id + "<br/> group:" + d.group;
+    }
 
-</body>
+</script>
